--- a/src/components/hero-slider.module.css
+++ b/src/components/hero-slider.module.css
@@ -36,7 +36,7 @@
   position: relative;
   z-index: 2;
   text-align: center;
-  padding: 0 var(--container-padding);
+  padding: 8rem var(--container-padding) 0;
   max-width: 1200px;
 }
 
