--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  top: 0;
+  top: 40px; /* Position below the fixed brand banner */
   left: 0;
   right: 0;
   z-index: 1000;
